2005-01-29 Arjan Bouter <abouter@sourcemage.org>
	* INSTALL: converted spell_installed to spell_ok

2005-01-23 Arjan Bouter <abouter@sourcemage.org>
	* lowercase linux-pam

2004-01-05 Eric Sandall <eric@sandall.us>
	* DETAILS: Updated to 1.1.23  SECURITY FIX  (Bug #7912)
	  Expanded SHORT

2004-11-22 Eric Sandall <eric@sandall.us>
	* PRE_BUILD: Changed `exit 1` to `return 1`  (Bug #7649)

2004-10-30 Treeve Jelbert <treeve01@pi.be>
	* DETAILS: version 1.2.2
	  adjust urls to use $VERSION

2004-09-16 Jason Flatt <jason@flattfamily.com>
	* DETAILS: Version bump to 1.2.1 (bug # 7374).
	  Corrected SOURCE_URL[0], moved it to position [3], created [0], [1]
	  & [2] and arranged them in the order most likely to succeed.

2004-08-29 Treeve Jelbert <treeve01@pi.be>
	* DETAILS: version 1.2.1rc2

2004-08-15 Jason Flatt <jason@flattfamily.com>
	* DETAILS: Correctly spelled BUILD_API (bug # 7233).
	  Removed MAINTAINER.
	* BUILD, DEPENDS, TRIGGERS: Cleaned up whitespace.
	* INSTALL: Simplified and cleaned up whitespace.

2004-06-03 Treeve Jelbert <treeve01@pi.be>
	* DETAILS: version 1.2.1rc1
	  BUILD_API=2
	* BUILD: simplify
	* INSTALL: add

2003-11-24 Jason Flatt <jason@flattfamily.com>
	* DETAILS: Version bump to 1.1.20.

2003-11-10 Jason Flatt <jason@flattfamily.com>
	* DETAILS: Version bump to 1.1.20rc6.

2003-10-27 Jason Flatt <jason@flattfamily.com>
	* DETAILS: Updated MD5 and VERSION to 1.1.20rc5.

2003-10-20 Jason Flatt <jason@flattfamily.com>
	* HISTORY: Reformatted this file based on new standard.

2003-10-09 Jason Flatt <jason@flattfamily.com>
	* DETAILS: updated UPDATED so hpoj users don't get hosed
	* init.d/cups: added check for hpoj in NEEDS

2003-09-19 Jason Flatt <jason@flattfamily.com>
	* DETAILS: Version bump to 1.1.20rc2.

2003-09-06 Jason Flatt <jason@flattfamily.com>
	* DETAILS: Version bump to 1.1.20rc1.

2003-08-22 hgg <hgreig@bigpond.net.au>
	* DETAILS: Update UPDATED purely for test grimoire integration.

2003-08-10 hgg <hgreig@bigpond.net.au>