@@ -9,7 +9,7 @@ SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL-$VERSION
         WEB_SITE=http://www.cups.org
           MD5[0]=76288bfac5ad00f9da7922af6fc7b9f3
          ENTERED=20010922
-         UPDATED=20031009
+         UPDATED=20050221
       LICENSE[0]=http://www.cups.org/faq0003.html
        BUILD_API=2
          ARCHIVE="off"
