@@ -1,3 +1,9 @@
+2005-02-21 Seth Woolley <seth@tautology.org>
+	* DETAILS: update UPDATED for SECURITY FIX
+	* PRE_BUILD: added patching for patch below
+	* xpdf-pl3.patch: added for security fix
+	  authenticated access can overflow xpdftops routine
+
 2005-01-29 Arjan Bouter <abouter@sourcemage.org>
 	* INSTALL: converted spell_installed to spell_ok
 
